--- a/index.html
+++ b/index.html
@@ -10,6 +10,18 @@
     <link rel="stylesheet" href="css/font.css">
 </head>
 <body>
-    
+    <header class="hd"></header>
+    <section class="main">
+        <section class="child1"></section>
+        <section class="child2"></section>
+        <section class="child3"></section>
+    </section>
+    <footer class="ft"></footer>
+
+    <!-- header.hd+section.main>section.child$*3^footer.ft -->
+
+
+
+    <script src="js/base.js"></script>
 </body>
 </html>
