--- a/index.html
+++ b/index.html
@@ -6,17 +6,32 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/reset-css@5.0.1/reset.min.css" rel="stylesheet">
-    <link rel="stylesheet" as="style" crossorigin href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.6/dist/web/static/pretendard.css" />
+    <link rel="stylesheet" as="style" crossorigin 
+    href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.6/dist/web/static/pretendard.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.4/font/bootstrap-icons.css">
     <link rel="stylesheet" href="css/font.css">
 </head>
 <body>
-    <header class="hd"></header>
+    <header class="hd d-flex">
+        <h1><a href="">로고</a></h1>
+        <ul id="gnb" class="d-flex">
+            <li><a href="">나의 소개</a></li>
+            <li><a href="">포폴</a></li>
+            <li><a href="">면접제안</a></li>
+        </ul>
+    </header>
     <section class="main">
         <section class="child1"></section>
         <section class="child2"></section>
         <section class="child3"></section>
     </section>
-    <footer class="ft"></footer>
+    <footer class="ft">
+        <ul class="sns d-flex">
+            <li><a href="" ><i class="bi bi-instagram text-white"></i></a></li>
+            <li><a href="" ><i class="bi bi-facebook text-white"></i></a></li>
+            <li><a href="" ><i class="bi bi-youtube text-white"></i></a></li>
+        </ul>
+    </footer>
 
     <!-- header.hd+section.main>section.child$*3^footer.ft -->
 
@@ -25,3 +40,4 @@
     <script src="js/base.js"></script>
 </body>
 </html>
+
